<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tabletop Roulette</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splendor_description"><![CDATA[Splendor is a game of chip-collecting and card development. Players are merchants of the Renaissance trying to buy gem mines, means of transportation, shops-all in order to acquire the most prestige points. If you\'re wealthy enough, you might even receive a visit from a noble at some point, which of course will further increase your prestige.\n\nOn your turn, you may (1) collect chips (gems), or (2) buy and build a card, or (3) reserve one card. If you collect chips, you take either three different kinds of chips or two chips of the same kind. If you buy a card, you pay its price in chips and add it to your playing area. To reserve a card&mdash;in order to make sure you get it, or, why not, your opponents don\'t get it-you place it in front of you face down for later building; this costs you a round, but you also get gold in the form of a joker chip, which you can use as any gem.\n\nAll of the cards you buy increase your wealth as they give you a permanent gem bonus for later buys; some of the cards also give you prestige points. In order to win the game, you must reach 15 prestige points before your opponents do.\n\n]]></string>
    <string name="splendor">Splendor</string>
    <string name="additional_details">Additional game details here</string>
    <string name="game_id_string">Game ID</string>
    <string name="not_assigned_string">Not assigned</string>
    <string name="game_name_string">Game Name</string>
    <string name="game_description_string">Game Description</string>
    <string name="add_string">Add</string>
    <string name="find_string">Find</string>
    <string name="delete_string">Delete</string>
    <string name="action_collection">Collection</string>
    <string name="action_add_game">Add Game</string>
    <string name="test_activity_string">Testing Activity</string>
    <string name="connection_error">Failed to connect to URL</string>
    <string name="xml_error">Error parsing XML</string>
    <string name="find_new_game">Find new game</string>
    <string name="rating">Rating: </string>
    <string name="add_game_to_collection">Add Game to Collection</string>
    <string name="players">Players: </string>
    <string name="play_time">Play time: </string>
    <string name="mechanic">Mechanic: </string>
    <string name="collection_string">Collection</string>
    <string name="feeling_lucky_string">I\'m Feeling Lucky</string>
    <string name="search_string">Search</string>
    <string name="number_of_players_string">Players</string>
    <string name="game_length_string">Game Length</string>
    <string name="minutes_string">minutes</string>
    <string name="game_mechanic_string">Game Mechanic</string>
    <string name="min_rating_string">Min. Rating</string>
    <string name="acion_filter_string">Filter</string>
    <string name="hint_string">Enter text here..</string>
    <string name="random_game_string">Random Game</string>
    <string name="details_string">Details</string>
    <string name="published_string">Published:</string>
    <string name="confirm_download_string">Are you sure? This action will replace your library with a new one.</string>
    <string-array name="games_array">
        <item>Alhambra</item>
        <item>Carcassonne</item>
        <item>Castles of Burgundy</item>
        <item>Chez Geek</item>
        <item>Muchkin</item>
        <item>Se7en Wonders</item>
        <item>Splendor</item>
    </string-array>

</resources>
