<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_collection" android:title="@string/action_collection"
        android:orderInCategory="101" app:showAsAction="always"
        android:icon="@drawable/ic_action_collection" />
    <item android:id="@+id/action_filter" android:title="@string/acion_filter_string"
        android:orderInCategory="103" app:showAsAction="always"
        android:icon="@drawable/ic_action_filter"/>
    <item android:id="@+id/action_new_game" android:title="@string/find_new_game"
        android:orderInCategory="102" app:showAsAction="always"
        android:icon="@drawable/ic_action_search_add" />
    <item android:id="@+id/action_random_game" android:title="@string/random_game_string"
        android:orderInCategory="103" app:showAsAction="always"
        android:icon="@drawable/ic_action_die" />
</menu>
